[metadata]
name = zevercloud-api
version = attr: zevercloud.__version__
description = Python wrapper for the Zevercloud API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogiervandergeer/zevercloud_api
author = Rogier van der Geer
author_email = rogier@vander-geer.nl
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    requests >= 2.28.0

[options.extras_require]
dev =
    black == 22.6.0
    pytest == 7.1.2

[options.package_data]
* = py.typed

[options.packages.find]
where=src
